--- a/.github/workflows/deploy-mkdocs.yml
+++ b/.github/workflows/deploy-mkdocs.yml
@@ -3,23 +3,15 @@ name: Deploy MkDocs site
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,20 +21,17 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install MkDocs and MkDocs Material
+      - name: Install MkDocs Material
         run: |
-          python -m pip install --upgrade pip
           pip install mkdocs mkdocs-material
 
       - name: Build MkDocs site
-        run: |
-          mkdocs build -f doc/mkdocs.yml
+        run: mkdocs build
 
-      - name: Upload Pages artifact
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'doc/site'
+          path: 'site'
 
       - name: Deploy to GitHub Pages
-        id: deployment
         uses: actions/deploy-pages@v4
